--- a/sites_urls.html
+++ b/sites_urls.html
@@ -21,9 +21,9 @@
 			<br/><br/>
 			*** Frontoffices<br/>
 			>> <a href="http://localhost:18080/fo-mcommerce" alt="{Q}alingo - Frontoffice mCommerce" target="_blank">{Q}alingo - Frontoffice mCommerce (Tomcat)</a><br/>
-			>> <a href="http://www.dev-qalingo-hoteia.com" alt="{Q}alingo - Frontoffice mCommerce" target="_blank">{Q}alingo - Frontoffice mCommerce (Apache)</a><br/>
+			>> <a href="http://fo-mcommerce.demo.qalingo-hoteia.com" alt="{Q}alingo - Frontoffice mCommerce" target="_blank">{Q}alingo - Frontoffice mCommerce (Apache)</a><br/>
 			>> <a href="http://localhost:19080/fo-prehome" alt="{Q}alingo - Frontoffice preHome" target="_blank">{Q}alingo - Frontoffice preHome (Tomcat)</a><br/>
-			>> <a href="http://prehome.dev-qalingo-hoteia.com" alt="{Q}alingo - Frontoffice preHome" target="_blank">{Q}alingo - Frontoffice preHome (Apache)</a><br/>
+			>> <a href="http://fo-prehome.demo.qalingo-hoteia.com" alt="{Q}alingo - Frontoffice preHome" target="_blank">{Q}alingo - Frontoffice preHome (Apache)</a><br/>
 			<br/><br/>
 			*** Remotes<br/>
 			>> <a href="http://localhost:20080/remote-rest" alt="{Q}alingo - Remote rest" target="_blank">{Q}alingo - Remote rest (Tomcat)</a><br/>
