--- a/sites_urls.html
+++ b/sites_urls.html
@@ -15,15 +15,15 @@
 			>> <a href="http://localhost:14080/solr" alt="{Q}alingo - Solr" target="_blank">{Q}alingo - Solr</a><br/>
 			<br/><br/>
 			*** Backoffices<br/>
-			>> <a href="http://bo-business.demo.qalingo-hoteia.com" alt="{Q}alingo - Backoffice business" target="_blank">{Q}alingo - Backoffice business</a><br/>
-			>> <a href="http://bo-reporting.demo.qalingo-hoteia.com" alt="{Q}alingo - Backoffice reporting" target="_blank">{Q}alingo - Backoffice reporting</a><br/>
-			>> <a href="http://bo-technical.demo.qalingo-hoteia.com" alt="{Q}alingo - Backoffice technical" target="_blank">{Q}alingo - Backoffice technical</a><br/>
+			>> <a href="http://bo-business.dev.qalingo.com" alt="{Q}alingo - Backoffice business" target="_blank">{Q}alingo - Backoffice business</a><br/>
+			>> <a href="http://bo-reporting.dev.qalingo.com" alt="{Q}alingo - Backoffice reporting" target="_blank">{Q}alingo - Backoffice reporting</a><br/>
+			>> <a href="http://bo-technical.dev.qalingo.com" alt="{Q}alingo - Backoffice technical" target="_blank">{Q}alingo - Backoffice technical</a><br/>
 			<br/><br/>
 			*** Frontoffices<br/>
 			>> <a href="http://localhost:18080/fo-mcommerce" alt="{Q}alingo - Frontoffice mCommerce" target="_blank">{Q}alingo - Frontoffice mCommerce (Tomcat)</a><br/>
-			>> <a href="http://fo-mcommerce.demo.qalingo-hoteia.com" alt="{Q}alingo - Frontoffice mCommerce" target="_blank">{Q}alingo - Frontoffice mCommerce (Apache)</a><br/>
+			>> <a href="http://fo-mcommerce.dev.qalingo.com" alt="{Q}alingo - Frontoffice mCommerce" target="_blank">{Q}alingo - Frontoffice mCommerce (Apache)</a><br/>
 			>> <a href="http://localhost:19080/fo-prehome" alt="{Q}alingo - Frontoffice preHome" target="_blank">{Q}alingo - Frontoffice preHome (Tomcat)</a><br/>
-			>> <a href="http://fo-prehome.demo.qalingo-hoteia.com" alt="{Q}alingo - Frontoffice preHome" target="_blank">{Q}alingo - Frontoffice preHome (Apache)</a><br/>
+			>> <a href="http://fo-prehome.dev.qalingo.com" alt="{Q}alingo - Frontoffice preHome" target="_blank">{Q}alingo - Frontoffice preHome (Apache)</a><br/>
 			<br/><br/>
 			*** Remotes<br/>
 			>> <a href="http://localhost:20080/remote-rest" alt="{Q}alingo - Remote rest" target="_blank">{Q}alingo - Remote rest (Tomcat)</a><br/>
