--- a/sites_urls.html
+++ b/sites_urls.html
@@ -15,9 +15,12 @@
 			>> <a href="http://localhost:14080/solr" alt="{Q}alingo - Solr" target="_blank">{Q}alingo - Solr</a><br/>
 			<br/><br/>
 			*** Backoffices<br/>
-			>> <a href="http://bo-business.dev.qalingo.com" alt="{Q}alingo - Backoffice business" target="_blank">{Q}alingo - Backoffice business</a><br/>
-			>> <a href="http://bo-reporting.dev.qalingo.com" alt="{Q}alingo - Backoffice reporting" target="_blank">{Q}alingo - Backoffice reporting</a><br/>
-			>> <a href="http://bo-technical.dev.qalingo.com" alt="{Q}alingo - Backoffice technical" target="_blank">{Q}alingo - Backoffice technical</a><br/>
+			>> <a href="http://localhost:15080/bo-business" alt="{Q}alingo - Backoffice business" target="_blank">{Q}alingo - Backoffice business (Tomcat)</a><br/>
+			>> <a href="http://bo-business.dev.qalingo.com" alt="{Q}alingo - Backoffice business" target="_blank">{Q}alingo - Backoffice business (Apache)</a><br/>
+			>> <a href="http://localhost:16080/bo-reporting" alt="{Q}alingo - Backoffice reporting" target="_blank">{Q}alingo - Backoffice reporting (Tomcat)</a><br/>
+			>> <a href="http://bo-reporting.dev.qalingo.com" alt="{Q}alingo - Backoffice reporting" target="_blank">{Q}alingo - Backoffice reporting (Apache)</a><br/>
+			>> <a href="http://localhost:17080/bo-technical" alt="{Q}alingo - Backoffice technical" target="_blank">{Q}alingo - Backoffice technical (Tomcat)</a><br/>
+			>> <a href="http://bo-technical.dev.qalingo.com" alt="{Q}alingo - Backoffice technical" target="_blank">{Q}alingo - Backoffice technical (Apache)</a><br/>
 			<br/><br/>
 			*** Frontoffices<br/>
 			>> <a href="http://localhost:18080/fo-mcommerce" alt="{Q}alingo - Frontoffice mCommerce" target="_blank">{Q}alingo - Frontoffice mCommerce (Tomcat)</a><br/>
