--- a/sites_urls.html
+++ b/sites_urls.html
@@ -13,6 +13,7 @@
 			>> <a href="http://localhost:12080/app-erp-sync" alt="{Q}alingo - Application ERP Sync" target="_blank">{Q}alingo - Application ERP Sync (Spring-batch)</a><br/>
 			>> <a href="http://localhost:13080/app-notification" alt="{Q}alingo - Application Notification" target="_blank">{Q}alingo - Application Notification (Spring-batch)</a><br/>
 			>> <a href="http://localhost:14080/solr" alt="{Q}alingo - Solr" target="_blank">{Q}alingo - Solr</a><br/>
+			>> <a href="http://localhost:8161/hawtio/#/login" alt="{Q}alingo - ActiveMQ" target="_blank">{Q}alingo - ActiveMQ (login: admin / password: admin)</a><br/>
 			<br/><br/>
 			*** Backoffices<br/>
 			>> <a href="http://localhost:15080/bo-business" alt="{Q}alingo - Backoffice business" target="_blank">{Q}alingo - Backoffice business (Tomcat)</a><br/>
