fix home page rest

--- a/webapp-remotes/webapp-remote-rest/src/main/webapp/index.html
+++ b/webapp-remotes/webapp-remote-rest/src/main/webapp/index.html
@@ -2,10 +2,10 @@
 	<head>
 	</head>
 	<body>
-		<a href="/rest/cms/">CMS List</a><br/>
-		<a href="/rest/customer/">Customer List</a><br/>
-		<a href="/rest/catalog/">Catalog List</a><br/>
-		<a href="/rest/retailer/">Retailer List</a><br/>
-		<a href="/rest/store/">Store List</a><br/>
+		<a href="rest/cms/" target="_blank">CMS List</a><br/>
+		<a href="rest/customer/" target="_blank">Customer List</a><br/>
+		<a href="rest/catalog/" target="_blank">Catalog List</a><br/>
+		<a href="rest/retailer/" target="_blank">Retailer List</a><br/>
+		<a href="rest/store/" target="_blank">Store List</a><br/>
 	</body>
 </html>
