--- a/webapp-remotes/webapp-remote-rest/src/main/webapp/index.html
+++ b/webapp-remotes/webapp-remote-rest/src/main/webapp/index.html
@@ -2,10 +2,27 @@
 	<head>
 	</head>
 	<body>
-		<a href="rest/cms/" target="_blank">CMS List</a><br/>
-		<a href="rest/customer/" target="_blank">Customer List</a><br/>
-		<a href="rest/catalog/" target="_blank">Catalog List</a><br/>
-		<a href="rest/retailer/" target="_blank">Retailer List</a><br/>
-		<a href="rest/store/" target="_blank">Store List</a><br/>
+		<ul>
+			<li><a href="rest/cms/" target="_blank">CMS Context List</a>
+				<ul>
+					<li><a href="rest/cms/marketplace/set/MARKETPLACE_CODE_VALUE" target="_blank">Set the MarketPlace</a></li>
+					<li><a href="rest/cms/market/set/MARKET_CODE_VALUE" target="_blank">Set the Market</a></li>
+					<li><a href="rest/cms/marketarea/set/MARKETAREA_CODE_VALUE" target="_blank">Set the Market Area</a></li>
+					<li><a href="rest/cms/retailer/set/MARKETAREA_CODE_VALUE/RETAILER_CODE_VALUE/LOCALIZATION_CODE_VALUE" target="_blank">Set the Retailer</a></li>
+					<li><a href="rest/cms/localization/set/MARKETAREA_CODE_VALUE/RETAILER_CODE_VALUE/LOCALIZATION_CODE_VALUE" target="_blank">Set the Localization</a></li>
+					<br/>
+					<li><a href="rest/cms/catalog/categories/MARKETAREA_CODE_VALUE" target="_blank">Get the catalog categories</a></li>
+					<li><a href="rest/cms/catalog/products/MARKETAREA_CODE_VALUE/CATEGORY_CODE_VALUE" target="_blank">Get the category products</a></li>
+				</ul>
+			</li>
+			<br/>
+			<li><a href="rest/customer/" target="_blank">Customer List</a></li>
+			<br/>
+			<li><a href="rest/catalog/" target="_blank">Catalog List</a></li>
+			<br/>
+			<li><a href="rest/retailer/" target="_blank">Retailer List</a></li>
+			<br/>
+			<li><a href="rest/store/" target="_blank">Store List</a></li>
+		</ul>
 	</body>
 </html>
