--- a/webapp-remotes/webapp-remote-rest/src/main/webapp/index.html
+++ b/webapp-remotes/webapp-remote-rest/src/main/webapp/index.html
@@ -2,8 +2,9 @@
 	<head>
 	</head>
 	<body>
+		<h1>Qalingo: Remote Rest Services</h1>
 		<ul>
-			<li><a href="rest/cms/" target="_blank">CMS Context List</a>
+			<li><a href="rest/cms/marketplaces" target="_blank">CMS Context List</a>
 				<ul>
 					<li><a href="rest/cms/marketplace/set/MARKETPLACE_CODE_VALUE" target="_blank">Set the MarketPlace</a></li>
 					<li><a href="rest/cms/market/set/MARKET_CODE_VALUE" target="_blank">Set the Market</a></li>
