change spring version

--- a/webapp-remotes/webapp-remote-ws/src/main/webapp/index.html
+++ b/webapp-remotes/webapp-remote-ws/src/main/webapp/index.html
@@ -2,6 +2,6 @@
 	<head>
 	</head>
 	<body>
-		<a href="ws/" target="_blank">All The webservices</a><br/>
+		<a href="ws/" target="_blank">All the webservices</a><br/>
 	</body>
 </html>
